data/derived/fa15/progs/unify/prog2167.ml.out
Characters 111-117:
  else (test x, false)
        ^^^^^^
Error: This expression has type int * bool
       but an expression was expected of type int
